include/main/libautodiag/com/serial/elm/elm.h

#ifndef __AD_ELM_H
#define __AD_ELM_H
/**
 * An ELM device provides at least the following commands
 */
#include "libautodiag/com/serial/serial.h"
#include "libautodiag/com/device_table.h"
#include "elm_iso15765.h"

#define AD_DEVICE_ELM_PROTO_AUTO 0

typedef struct ELMDevice {
    Serial;
    /**
     * Did responses print space between bytes
     */
    bool printing_of_spaces;
    /**
     * Mainly send at commands to prepare interface.
     */
    bool (*configure)(final Device* elm);
    /**
     * Is protocol can.
     */
    bool (*proto_is_can)(final Device * elm);
    /**
     * Protocol used to communicate on that interface, some interfaces could communicate with multiple protocols.<br />
     * This data represent only the protocol currently in use.<br />
     * e.g. ISO 15765-4 CAN (11-bit ID, 500 kBit/s)<br />
     */
    int protocol;
    /**
     * Fetch and store proto
     */
    bool (*fetch_protocol)(final struct ELMDevice * elm);
    /**
     * Assuming printing of headers is on.
     */
    bool (*verify_checksum)(final struct ELMDevice * elm, final Buffer * buffer);
} ELMDevice;

static inline byte j1850_crc(final Buffer * buffer)
{
    assert(buffer != null);
    assert(0 < buffer->size);
    byte crc = 0xFF;

    for(int i = 0; i < buffer->size-1; i++) {
        crc ^= buffer->buffer[i];
        for (int j = 0; j < 8; j++) {
            if (crc & 0x80)
                crc = (crc << 1) ^ 0x1D;
            else
                crc <<= 1;
        }
    }

    return crc ^ 0xFF;
}

#define AD_ELM_DEVICE_CONFIGURE(var) ((bool (*)(final Device*))var)
#define AD_ELM_DEVICE(var) ((struct ELMDevice*)var)
#define AD_ELM_DEVICE_PROTO_IS_CAN(var) ((bool (*)(final Device*))var)
#define AD_DEVICE_ELM_FETCH_PROTOCOL(var) ((bool (*)(struct ELMDevice *))var)
#define AD_DEVICE_ELM_VERIFY_CHECKSUM(var) ((bool (*)(struct ELMDevice *, Buffer *))var)

#define ELM_RESPONSE_UNKNOWN                 0xF00

static int ELMResponseOffset = 0xF00;
static int ELMResponseStrNumber = 1;
static char * ELMResponseStr[] = {
    "?"
};
int elm_guess_response(final char * buffer);
int elm_linefeeds(final Serial * port, final bool state);
int elm_echo(final Serial * port, final bool state);
/**
 * Make the elm to print it's identification string
 * @warning there is no lock of interface here, caller must ensure exclusive access to the device
 */
char * elm_print_id(final Serial * port);
/**
 * Try to open an elm device from the provided serial
 */
ELMDevice* elm_open_from_serial(final Serial * port);

Buffer * elm_ascii_to_bin(final ELMDevice * elm, final Buffer * ascii);
Buffer * elm_ascii_to_bin_str(final ELMDevice * elm, final char * ascii, final char * end_ptr);
void elm_ascii_to_bin_internal(final bool printing_of_spaces, final Buffer * bin, final char * ascii, final char * end_ptr);
char* elm_ascii_from_bin(final bool printing_of_spaces, final Buffer * bin);
void elm_debug(final ELMDevice * elm);
bool elm_standard_obd_message_parse_response(final ELMDevice* elm, final Vehicle* vehicle);

/**
 * Ensure that connection to vehicle is right, for some reason some devices incorrectly choose protocol.
 * @param protocol_max_value maximum protocol value included
 */
bool elm_ensure_protocol_config_success(final ELMDevice* elm, final int protocol_max_value);

#include "elm329/elm329.h"
#include "elm327/elm327.h"
#include "elm323/elm323.h"
#include "elm322.h"
#include "elm320.h"

#endif